<resources>
    <string name="app_name">PDM_Proyecto1_I_P1_JuegoAhorcado</string>
    <string name="btn_crear">CREAR PALABRA</string>
    <string name="btn_salir">SALIR</string>
    <string name="btn_jugar">Jugar</string>
    <string name="btn_adivinar">ADIVINAR PALABRA</string>
    <string name="txtPista">Pista:"Esta en el Cielo"</string>
    <string name="txtdescripcion">Imagen</string>
    <string name="txtGanaste">¡GANASTE!</string>
    <string name="txtPerdiste">¡PERDISTE!</string>
    <string name="txtNubes">¡La palabra correcta es: Nubes!</string>
    <string name="txtPista2">Esta en el cielo:</string>
    <string name="txtPalabra">"Nubes"</string>
    <string name="btnAgregar">Agregar Palabra</string>
    <string name="TxtPalabra">Nube</string>
    <string name="Pista1">La pista es %S </string>
    <string name="intento">Intento %S </string>
    <string name="palabra">Palabra</string>
    <string name="validar">Validar</string>
    <string name="intentos">Intentos</string>
</resources>