<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".PantallaJuego">

    <TextView
        android:id="@+id/txtPista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="692dp"
        android:fontFamily="@font/rum_raisin"
        android:text="@string/txtPista"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageBrazoDerecho"
        android:layout_width="70dp"
        android:layout_height="166dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/txtdescripcion"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/brazo_derecho" />

    <ImageView
        android:id="@+id/imageCuerpo"
        android:layout_width="70dp"
        android:layout_height="166dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="125dp"
        android:contentDescription="@string/txtdescripcion"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cuerpo" />


    <ImageView
        android:id="@+id/imagePiernaDerecha"
        android:layout_width="70dp"
        android:layout_height="166dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/txtdescripcion"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pierna_derecha" />

    <ImageView
        android:id="@+id/imagePiernaIzquierda"
        android:layout_width="70dp"
        android:layout_height="166dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="125dp"
        android:contentDescription="@string/txtdescripcion"
        android:rotation="15"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pierna_izquierda" />

    <ImageView
        android:id="@+id/imageBrazoIzquierdo"
        android:layout_width="70dp"
        android:layout_height="166dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="175dp"
        android:contentDescription="@string/txtdescripcion"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/brazo_izquierdo" />

    <ImageView
        android:id="@+id/imageCabeza"
        android:layout_width="100dp"
        android:layout_height="122dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/txtdescripcion"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cara_triste" />


    <EditText
        android:id="@+id/txtpalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="3"
        android:fontFamily="@font/rum_raisin"
        android:hint="@string/palabra"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnValidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="308dp"
        android:layout_marginTop="380dp"
        android:text="@string/validar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvIntento"
        android:layout_width="55dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="136dp"
        android:text="@string/intentos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>